# watcher

./: Cargo.toml  _watcher
.github/workflows/: ci.yml  release.yml
src/: main.rs
