[package]
name = "watcher"
version = "0.5.0"
edition = "2021"
rust-version = "1.67" # std::sync::mpsc implementation updated based on crossbeam-channel. 
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "4.1", features = ["derive"] }
env_logger = "0.10"
humantime = "2.1"
log = "0.4"
notify = { version = "5.1", default-features = false }
shlex = "1.1"
strum = { version = "0.24", features = ["derive"] }
fake-tty = "0.3"
itertools = "0.10"
globset = "0.4"
clap_complete = "4.1"

[dev-dependencies]
tempfile = "3.3"
ctor = "0.1"
rand = "0.8"

[profile.release]
lto = true
strip = true
opt-level = "z"
codegen-units = 1
